<resources>
    <string name="app_name">ICE3</string>
    <string name="welcome">Welcome</string>
    <string name="start">Start</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="login">Login</string>
    <string name="password_label">Password:</string>
    <string name="overlay_text">Overlay Text</string>
    <string name="pink_background">Pink background</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="result_default">0</string>
    <string name="percent_button_text">%</string>
    <string name="clear_button_text">C</string>
    <string name="delete_button_text">\uf55a</string>
    <string name="divide_button_text">\uf529</string>
    <string name="seven_button_text">7</string>
    <string name="eight_button_text">8</string>
    <string name="nine_button_text">9</string>
    <string name="multiply_button_text">x</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_button_text">6</string>
    <string name="minus_button_text">-</string>
    <string name="one_button_text">\u0031</string>
    <string name="two_button_text">2</string>
    <string name="three_button_text">3</string>
    <string name="plus_button_text">+</string>
    <string name="plus_minus_button_text">+/-</string>
    <string name="zero_button_text">0</string>
    <string name="decimal_button_text">.</string>
    <string name="equals_button_text">=</string>
    <string name="spinner_icon">\uf110</string>
</resources>