<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="@dimen/padding_wide">

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/button_1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/button_2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/button_3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/button_4" />

</GridLayout>