<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/Row6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/result_row_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40">

        <EditText
            android:id="@+id/resultEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:importantForAutofill="no"
            android:inputType="none"
            android:padding="@dimen/result_edit_text_padding"
            android:text="@string/result_default"
            android:textSize="@dimen/result_text_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Row4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Row6">

        <Button
            android:id="@+id/percentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/bright_orange"
            android:padding="@dimen/zero"
            android:text="@string/percent_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/bright_orange"
            android:padding="@dimen/zero"
            android:text="@string/clear_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/bright_orange"
            android:padding="@dimen/zero"
            android:text="@string/delete_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/burnt_orange"
            android:padding="@dimen/zero"
            android:text="@string/divide_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Row3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Row5">

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/seven_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/eight_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/nine_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/burnt_orange"
            android:padding="@dimen/zero"
            android:text="@string/multiply_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Row2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Row4">

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/four_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/five_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/six_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/minusMinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/burnt_orange"
            android:padding="@dimen/zero"
            android:text="@string/minus_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Row1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Row3">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/one_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/two_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/three_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/burnt_orange"
            android:padding="@dimen/zero"
            android:text="@string/plus_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Row2">

        <Button
            android:id="@+id/plusMinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/bright_orange"
            android:padding="@dimen/zero"
            android:text="@string/plus_minus_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/zero_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/decimalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/zero"
            android:text="@string/decimal_button_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/equalsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="#CC5500"
            android:padding="@dimen/zero"
            android:text="@string/equals_button_text"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>